# janalysis

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  jquants_api_quick_start_en.py  pyproject.toml  run_tests.py  setup-hooks.sh  test_storage.py
.claude/: settings.local.json
.ipython/profile_default/: history.sqlite
.ipython/profile_default/startup/: 00_utils.py
configs/: __init__.py  blob_backends.py
docs/: corporate_actions_plan.md  jqsys_implementation_summary.md  jquants_cli_usage.md  project_plan.md  timeseries_storage_research.md
hooks/: pre-commit
jqsys/: __init__.py  auth.py  client.py  portfolio.py  stock.py
jqsys/core/: __init__.py
jqsys/core/storage/: __init__.py  blob.py  blob_config.py  registry.py
jqsys/core/storage/backends/: __init__.py  filesystem_backend.py  minio_backend.py  mongodb_backend.py  prefixed_backend.py
jqsys/core/utils/: __init__.py  config.py  env.py
jqsys/data/: __init__.py  auth.py  client.py  ingest.py  portfolio.py  stock.py
jqsys/data/layers/: __init__.py  bronze.py  gold.py  silver.py
jqsys/fin/: __init__.py  stock.py
jqsys/storage/: __init__.py  blob.py  blob_config.py  bronze.py  object.py  query.py  registry.py  silver.py
jqsys/storage/backends/: __init__.py  filesystem_backend.py  minio_backend.py  mongodb_backend.py  prefixed_backend.py
jqsys/utils/: env.py
notebooks/: stock_demo.ipynb
scripts/: demo_new_storage.py  demo_registry.py  demo_stock_api.py  demo_storage_apis.py  ingest_daily_quotes.py  jq_auth.py  jq_daily_quotes.py  jq_fins_announcement.py  jq_fins_statements.py  jq_listed_info.py  jq_trading_calendar.py
scripts/api/: jq_auth.py  jq_fins_announcement.py  jq_fins_statements.py  jq_listed_info.py  jq_trading_calendar.py
scripts/batch/: ingest_daily_quotes.py  ingest_listed_info.py  normalize_daily_quotes.py  run_data_pipeline.py  transform_daily_prices.py
scripts/demo/: demo_filesystem_storage.py  demo_registry.py  demo_stock_api.py  demo_storage_apis.py
tests/: conftest.py  test_auth.py  test_blob_storage.py  test_bronze_storage.py  test_client.py  test_config.py  test_gold_storage.py  test_integration.py  test_minio_backend.py  test_query_engine.py  test_registry.py  test_silver_storage.py  test_utils.py
tests/fin/: test_stock.py
vscode/: launch.json  settings.json
