[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jqsys"
version = "0.1.0"
description = "Lightweight J-Quants utilities for CLI demos and financial analysis"
authors = [{name = "janalysis", email = "user@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "duckdb>=1.3.2",
    "numpy>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "pygments>=2.19.2",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "idna>=3.10",
    "urllib3>=2.5.0",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "packaging>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "iniconfig>=2.1.0",
    "pluggy>=1.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter-console>=6.6.3",
]

[tool.hatch.build.targets.wheel]
packages = ["jqsys"]
