[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jqsys"
version = "0.1.0"
description = "Lightweight J-Quants utilities for CLI demos and financial analysis"
authors = [{name = "janalysis", email = "user@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "duckdb>=1.3.2",
    "numpy>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "pygments>=2.19.2",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "idna>=3.10",
    "urllib3>=2.5.0",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "packaging>=25.0",
    "minio>=7.2.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "iniconfig>=2.1.0",
    "pluggy>=1.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter-console>=6.6.3",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["jqsys"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # use raise from within except
    "B017",   # pytest.raises(Exception) is too broad
    "SIM105", # use contextlib.suppress
    "SIM113", # use enumerate
    "ARG002", # unused method argument
    "ARG004", # unused static method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101"]  # unused args and assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
